[project]
name = "lobbyharvest"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "click>=8.3.0",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]

[project.scripts]
lobbyharvest = "lobbyharvest.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]
